org.eclipse.twig.core/src/org/eclipse/twig/core/parser/TwigParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 TwigParser.g 2011-06-22 09:15:10

package org.eclipse.twig.core.parser;

import org.eclipse.twig.core.parser.error.IErrorReporter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TwigParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PRINT_OPEN", "PRINT_CLOSE", "CTRL_OPEN", "CTRL_CLOSE", "METHOD_START", "METHOD_END", "ARRAY_START", "ARRAY_END", "ASIG", "TILDE", "PIPE", "DDOT", "DOT", "COLON", "COMMA", "BSLASH", "JSON_START", "JSON_END", "QM", "BLOCK", "ENDBLOCK", "FOR", "ENDFOR", "ELSE", "IF", "ELSEIF", "ENDIF", "IN", "TWIG_AS", "MACRO", "ENDMACRO", "IMPORT", "FROM", "SET", "ENDSET", "INCLUDE", "WITH", "ONLY", "DIGIT", "NUMBER", "STRING_CHAR", "STRING", "NONCONTROL_CHAR", "STRING_LITERAL", "LOWER", "UPPER", "UNDER", "LETTER", "SYMBOL", "WHITESPACE", "TWIG_PR_STMT", "TWIG_VAR", "LITERAL_ARG"
    };
    public static final int EOF=-1;
    public static final int PRINT_OPEN=4;
    public static final int PRINT_CLOSE=5;
    public static final int CTRL_OPEN=6;
    public static final int CTRL_CLOSE=7;
    public static final int METHOD_START=8;
    public static final int METHOD_END=9;
    public static final int ARRAY_START=10;
    public static final int ARRAY_END=11;
    public static final int ASIG=12;
    public static final int TILDE=13;
    public static final int PIPE=14;
    public static final int DDOT=15;
    public static final int DOT=16;
    public static final int COLON=17;
    public static final int COMMA=18;
    public static final int BSLASH=19;
    public static final int JSON_START=20;
    public static final int JSON_END=21;
    public static final int QM=22;
    public static final int BLOCK=23;
    public static final int ENDBLOCK=24;
    public static final int FOR=25;
    public static final int ENDFOR=26;
    public static final int ELSE=27;
    public static final int IF=28;
    public static final int ELSEIF=29;
    public static final int ENDIF=30;
    public static final int IN=31;
    public static final int TWIG_AS=32;
    public static final int MACRO=33;
    public static final int ENDMACRO=34;
    public static final int IMPORT=35;
    public static final int FROM=36;
    public static final int SET=37;
    public static final int ENDSET=38;
    public static final int INCLUDE=39;
    public static final int WITH=40;
    public static final int ONLY=41;
    public static final int DIGIT=42;
    public static final int NUMBER=43;
    public static final int STRING_CHAR=44;
    public static final int STRING=45;
    public static final int NONCONTROL_CHAR=46;
    public static final int STRING_LITERAL=47;
    public static final int LOWER=48;
    public static final int UPPER=49;
    public static final int UNDER=50;
    public static final int LETTER=51;
    public static final int SYMBOL=52;
    public static final int WHITESPACE=53;
    public static final int TWIG_PR_STMT=54;
    public static final int TWIG_VAR=55;
    public static final int LITERAL_ARG=56;

    // delegates
    // delegators


        public TwigParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TwigParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TwigParser.tokenNames; }
    public String getGrammarFileName() { return "TwigParser.g"; }



        private IErrorReporter errorReporter = null;
        
        public TwigParser(TokenStream input, IErrorReporter errorReporter) {
            this(input, new RecognizerSharedState());
            this.errorReporter = errorReporter;
        }

    	public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {

            
           if(errorReporter == null) {
           		System.err.println("No error reporter instance found!");
            	return;
           }
            	
    		String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);        
            errorReporter.reportError(hdr,msg,e);
            
        }    
        
        public void setErrorReporter(IErrorReporter errorReporter) {
            this.errorReporter = errorReporter;
        }
        
    	protected Object recoverFromMismatchedToken(IntStream input,
    				int ttype, BitSet follow) throws RecognitionException
    	{   
    	    throw new MismatchedTokenException(ttype, input);
    	}       
    	
        public Object recoverFromMismatchedSet(IntStream input,
        			RecognitionException e, BitSet follow) throws RecognitionException 
        { 
    		throw new MismatchedSetException(follow, input);
       	}
    	


    public static class twig_source_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_source"
    // TwigParser.g:66:1: twig_source : ( twig_print_statement | twig_control_statement );
    public final TwigParser.twig_source_return twig_source() throws RecognitionException {
        TwigParser.twig_source_return retval = new TwigParser.twig_source_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        TwigParser.twig_print_statement_return twig_print_statement1 = null;

        TwigParser.twig_control_statement_return twig_control_statement2 = null;



        try {
            // TwigParser.g:67:3: ( twig_print_statement | twig_control_statement )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PRINT_OPEN) ) {
                alt1=1;
            }
            else if ( (LA1_0==CTRL_OPEN) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // TwigParser.g:67:5: twig_print_statement
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_print_statement_in_twig_source69);
                    twig_print_statement1=twig_print_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_print_statement1.getTree());

                    }
                    break;
                case 2 :
                    // TwigParser.g:67:28: twig_control_statement
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_control_statement_in_twig_source73);
                    twig_control_statement2=twig_control_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_control_statement2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_source"

    public static class twig_control_statement_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control_statement"
    // TwigParser.g:73:1: twig_control_statement : CTRL_OPEN ( twig_control )? CTRL_CLOSE ;
    public final TwigParser.twig_control_statement_return twig_control_statement() throws RecognitionException {
        TwigParser.twig_control_statement_return retval = new TwigParser.twig_control_statement_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken CTRL_OPEN3=null;
        CommonToken CTRL_CLOSE5=null;
        TwigParser.twig_control_return twig_control4 = null;


        TwigCommonTree CTRL_OPEN3_tree=null;
        TwigCommonTree CTRL_CLOSE5_tree=null;

        try {
            // TwigParser.g:74:3: ( CTRL_OPEN ( twig_control )? CTRL_CLOSE )
            // TwigParser.g:74:5: CTRL_OPEN ( twig_control )? CTRL_CLOSE
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            CTRL_OPEN3=(CommonToken)match(input,CTRL_OPEN,FOLLOW_CTRL_OPEN_in_twig_control_statement89); 
            CTRL_OPEN3_tree = (TwigCommonTree)adaptor.create(CTRL_OPEN3);
            adaptor.addChild(root_0, CTRL_OPEN3_tree);

            // TwigParser.g:74:15: ( twig_control )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=BLOCK && LA2_0<=ENDIF)||(LA2_0>=MACRO && LA2_0<=INCLUDE)||LA2_0==STRING) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // TwigParser.g:74:15: twig_control
                    {
                    pushFollow(FOLLOW_twig_control_in_twig_control_statement91);
                    twig_control4=twig_control();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_control4.getTree());

                    }
                    break;

            }

            CTRL_CLOSE5=(CommonToken)match(input,CTRL_CLOSE,FOLLOW_CTRL_CLOSE_in_twig_control_statement94); 
            CTRL_CLOSE5_tree = (TwigCommonTree)adaptor.create(CTRL_CLOSE5);
            adaptor.addChild(root_0, CTRL_CLOSE5_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control_statement"

    public static class twig_control_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_control"
    // TwigParser.g:78:1: twig_control : ( twig_for | ENDFOR | ELSE | twig_if | twig_elseif | ENDIF | twig_macro | twig_import | twig_set | twig_include | twig_block );
    public final TwigParser.twig_control_return twig_control() throws RecognitionException {
        TwigParser.twig_control_return retval = new TwigParser.twig_control_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken ENDFOR7=null;
        CommonToken ELSE8=null;
        CommonToken ENDIF11=null;
        TwigParser.twig_for_return twig_for6 = null;

        TwigParser.twig_if_return twig_if9 = null;

        TwigParser.twig_elseif_return twig_elseif10 = null;

        TwigParser.twig_macro_return twig_macro12 = null;

        TwigParser.twig_import_return twig_import13 = null;

        TwigParser.twig_set_return twig_set14 = null;

        TwigParser.twig_include_return twig_include15 = null;

        TwigParser.twig_block_return twig_block16 = null;


        TwigCommonTree ENDFOR7_tree=null;
        TwigCommonTree ELSE8_tree=null;
        TwigCommonTree ENDIF11_tree=null;

        try {
            // TwigParser.g:79:3: ( twig_for | ENDFOR | ELSE | twig_if | twig_elseif | ENDIF | twig_macro | twig_import | twig_set | twig_include | twig_block )
            int alt3=11;
            switch ( input.LA(1) ) {
            case FOR:
                {
                alt3=1;
                }
                break;
            case ENDFOR:
                {
                alt3=2;
                }
                break;
            case ELSE:
                {
                alt3=3;
                }
                break;
            case IF:
            case STRING:
                {
                alt3=4;
                }
                break;
            case ELSEIF:
                {
                alt3=5;
                }
                break;
            case ENDIF:
                {
                alt3=6;
                }
                break;
            case MACRO:
            case ENDMACRO:
                {
                alt3=7;
                }
                break;
            case IMPORT:
            case FROM:
                {
                alt3=8;
                }
                break;
            case SET:
            case ENDSET:
                {
                alt3=9;
                }
                break;
            case INCLUDE:
                {
                alt3=10;
                }
                break;
            case BLOCK:
            case ENDBLOCK:
                {
                alt3=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // TwigParser.g:79:5: twig_for
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_for_in_twig_control108);
                    twig_for6=twig_for();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_for6.getTree());

                    }
                    break;
                case 2 :
                    // TwigParser.g:79:16: ENDFOR
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    ENDFOR7=(CommonToken)match(input,ENDFOR,FOLLOW_ENDFOR_in_twig_control112); 
                    ENDFOR7_tree = (TwigCommonTree)adaptor.create(ENDFOR7);
                    adaptor.addChild(root_0, ENDFOR7_tree);


                    }
                    break;
                case 3 :
                    // TwigParser.g:79:25: ELSE
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    ELSE8=(CommonToken)match(input,ELSE,FOLLOW_ELSE_in_twig_control116); 
                    ELSE8_tree = (TwigCommonTree)adaptor.create(ELSE8);
                    adaptor.addChild(root_0, ELSE8_tree);


                    }
                    break;
                case 4 :
                    // TwigParser.g:79:32: twig_if
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_if_in_twig_control120);
                    twig_if9=twig_if();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_if9.getTree());

                    }
                    break;
                case 5 :
                    // TwigParser.g:79:42: twig_elseif
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_elseif_in_twig_control124);
                    twig_elseif10=twig_elseif();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_elseif10.getTree());

                    }
                    break;
                case 6 :
                    // TwigParser.g:79:56: ENDIF
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    ENDIF11=(CommonToken)match(input,ENDIF,FOLLOW_ENDIF_in_twig_control128); 
                    ENDIF11_tree = (TwigCommonTree)adaptor.create(ENDIF11);
                    adaptor.addChild(root_0, ENDIF11_tree);


                    }
                    break;
                case 7 :
                    // TwigParser.g:79:64: twig_macro
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_macro_in_twig_control132);
                    twig_macro12=twig_macro();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_macro12.getTree());

                    }
                    break;
                case 8 :
                    // TwigParser.g:79:77: twig_import
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_import_in_twig_control136);
                    twig_import13=twig_import();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_import13.getTree());

                    }
                    break;
                case 9 :
                    // TwigParser.g:79:91: twig_set
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_set_in_twig_control140);
                    twig_set14=twig_set();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_set14.getTree());

                    }
                    break;
                case 10 :
                    // TwigParser.g:79:102: twig_include
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_include_in_twig_control144);
                    twig_include15=twig_include();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_include15.getTree());

                    }
                    break;
                case 11 :
                    // TwigParser.g:79:117: twig_block
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    pushFollow(FOLLOW_twig_block_in_twig_control148);
                    twig_block16=twig_block();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_block16.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_control"

    public static class twig_block_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_block"
    // TwigParser.g:83:1: twig_block : ( ( BLOCK twig_block_param ) | ( ENDBLOCK ) );
    public final TwigParser.twig_block_return twig_block() throws RecognitionException {
        TwigParser.twig_block_return retval = new TwigParser.twig_block_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken BLOCK17=null;
        CommonToken ENDBLOCK19=null;
        TwigParser.twig_block_param_return twig_block_param18 = null;


        TwigCommonTree BLOCK17_tree=null;
        TwigCommonTree ENDBLOCK19_tree=null;

        try {
            // TwigParser.g:84:3: ( ( BLOCK twig_block_param ) | ( ENDBLOCK ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==BLOCK) ) {
                alt4=1;
            }
            else if ( (LA4_0==ENDBLOCK) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // TwigParser.g:84:5: ( BLOCK twig_block_param )
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    // TwigParser.g:84:5: ( BLOCK twig_block_param )
                    // TwigParser.g:84:6: BLOCK twig_block_param
                    {
                    BLOCK17=(CommonToken)match(input,BLOCK,FOLLOW_BLOCK_in_twig_block167); 
                    BLOCK17_tree = (TwigCommonTree)adaptor.create(BLOCK17);
                    adaptor.addChild(root_0, BLOCK17_tree);

                    pushFollow(FOLLOW_twig_block_param_in_twig_block169);
                    twig_block_param18=twig_block_param();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_block_param18.getTree());

                    }


                    }
                    break;
                case 2 :
                    // TwigParser.g:84:32: ( ENDBLOCK )
                    {
                    root_0 = (TwigCommonTree)adaptor.nil();

                    // TwigParser.g:84:32: ( ENDBLOCK )
                    // TwigParser.g:84:33: ENDBLOCK
                    {
                    ENDBLOCK19=(CommonToken)match(input,ENDBLOCK,FOLLOW_ENDBLOCK_in_twig_block175); 
                    ENDBLOCK19_tree = (TwigCommonTree)adaptor.create(ENDBLOCK19);
                    adaptor.addChild(root_0, ENDBLOCK19_tree);


                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_block"

    public static class twig_block_param_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_block_param"
    // TwigParser.g:87:1: twig_block_param : ( variable | method ) ( twig_print )? ;
    public final TwigParser.twig_block_param_return twig_block_param() throws RecognitionException {
        TwigParser.twig_block_param_return retval = new TwigParser.twig_block_param_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        TwigParser.variable_return variable20 = null;

        TwigParser.method_return method21 = null;

        TwigParser.twig_print_return twig_print22 = null;



        try {
            // TwigParser.g:88:3: ( ( variable | method ) ( twig_print )? )
            // TwigParser.g:88:5: ( variable | method ) ( twig_print )?
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            // TwigParser.g:88:5: ( variable | method )
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // TwigParser.g:88:6: variable
                    {
                    pushFollow(FOLLOW_variable_in_twig_block_param192);
                    variable20=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, variable20.getTree());

                    }
                    break;
                case 2 :
                    // TwigParser.g:88:17: method
                    {
                    pushFollow(FOLLOW_method_in_twig_block_param196);
                    method21=method();

                    state._fsp--;

                    adaptor.addChild(root_0, method21.getTree());

                    }
                    break;

            }

            // TwigParser.g:88:25: ( twig_print )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ARRAY_START||LA6_0==STRING||LA6_0==STRING_LITERAL) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // TwigParser.g:88:25: twig_print
                    {
                    pushFollow(FOLLOW_twig_print_in_twig_block_param199);
                    twig_print22=twig_print();

                    state._fsp--;

                    adaptor.addChild(root_0, twig_print22.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_block_param"

    public static class twig_include_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "twig_include"
    // TwigParser.g:91:1: twig_include : INCLUDE ( include_ternary | include_statement ) ;
    public final TwigParser.twig_include_return twig_include() throws RecognitionException {
        TwigParser.twig_include_return retval = new TwigParser.twig_include_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken INCLUDE23=null;
        TwigParser.include_ternary_return include_ternary24 = null;

        TwigParser.include_statement_return include_statement25 = null;


        TwigCommonTree INCLUDE23_tree=null;

        try {
            // TwigParser.g:92:3: ( INCLUDE ( include_ternary | include_statement ) )
            // TwigParser.g:92:5: INCLUDE ( include_ternary | include_statement )
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            INCLUDE23=(CommonToken)match(input,INCLUDE,FOLLOW_INCLUDE_in_twig_include215); 
            INCLUDE23_tree = (TwigCommonTree)adaptor.create(INCLUDE23);
            adaptor.addChild(root_0, INCLUDE23_tree);

            // TwigParser.g:92:13: ( include_ternary | include_statement )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==STRING_LITERAL) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==QM) ) {
                    alt7=1;
                }
                else if ( (LA7_1==CTRL_CLOSE||(LA7_1>=WITH && LA7_1<=ONLY)) ) {
                    alt7=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA7_0==NUMBER||LA7_0==STRING) ) {
                alt7=1;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // TwigParser.g:92:14: include_ternary
                    {
                    pushFollow(FOLLOW_include_ternary_in_twig_include218);
                    include_ternary24=include_ternary();

                    state._fsp--;

                    adaptor.addChild(root_0, include_ternary24.getTree());

                    }
                    break;
                case 2 :
                    // TwigParser.g:92:32: include_statement
                    {
                    pushFollow(FOLLOW_include_statement_in_twig_include222);
                    include_statement25=include_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, include_statement25.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "twig_include"

    public static class include_ternary_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "include_ternary"
    // TwigParser.g:95:1: include_ternary : twig_ternary ( ONLY )? ;
    public final TwigParser.include_ternary_return include_ternary() throws RecognitionException {
        TwigParser.include_ternary_return retval = new TwigParser.include_ternary_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken ONLY27=null;
        TwigParser.twig_ternary_return twig_ternary26 = null;


        TwigCommonTree ONLY27_tree=null;

        try {
            // TwigParser.g:96:3: ( twig_ternary ( ONLY )? )
            // TwigParser.g:96:5: twig_ternary ( ONLY )?
            {
            root_0 = (TwigCommonTree)adaptor.nil();

            pushFollow(FOLLOW_twig_ternary_in_include_ternary238);
            twig_ternary26=twig_ternary();

            state._fsp--;

            adaptor.addChild(root_0, twig_ternary26.getTree());
            // TwigParser.g:96:18: ( ONLY )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ONLY) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // TwigParser.g:96:18: ONLY
                    {
                    ONLY27=(CommonToken)match(input,ONLY,FOLLOW_ONLY_in_include_ternary240); 
                    ONLY27_tree = (TwigCommonTree)adaptor.create(ONLY27);
                    adaptor.addChild(root_0, ONLY27_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (TwigCommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (TwigCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "include_ternary"

    public static class include_statement_return extends ParserRuleReturnScope {
        TwigCommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "include_statement"
    // TwigParser.g:99:1: include_statement : ( STRING_LITERAL ) ( ONLY )? ( WITH ( variable | STRING_LITERAL | method | json ) ( ONLY )? )? ;
    public final TwigParser.include_statement_return include_statement() throws RecognitionException {
        TwigParser.include_statement_return retval = new TwigParser.include_statement_return();
        retval.start = input.LT(1);

        TwigCommonTree root_0 = null;

        CommonToken STRING_LITERAL28=null;
        CommonToken ONLY29=null;
        CommonToken WITH30=null;
        CommonToken STRING_LITERAL32=null;
        CommonToken ONLY35=null;
        TwigParser.variable_return variable31 = null;

        TwigParser.method_return method33 = null;

        TwigParser.json_return json34 = null;


        TwigCommonTree STRING_LITERAL28_tree=null;
        TwigCommonTree ONLY29_tree=null;
        TwigCommonTree WITH30_tree=null;
        TwigCommonTree STRING_LITERAL32_tree=null;
        TwigCommonTree ONLY35_tree=null;

        try {
            // TwigParser.g:100:3: ( ( STRING_LITERAL ) ( ONLY )? ( WITH ( variable | STRING_LITERAL | method | json ) ( ONLY )? )? )
            // TwigParser.g:100:5: ( STRING_LITERAL ) ( ONLY )? ( WITH ( variable | STRING_LITERAL | method | json ) ( ONLY )? )?
            {
            root_0 = (TwigCommonTree)adaptor.nil();
